leptos_macro/tests/ui/view/missing_field.stderr
warning: use of deprecated method `ComponentPropsBuilder::build`: Missing required field prop
  --> tests/ui/view/missing_field.rs:10:10
   |
10 |         <Component />
   |          ^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/view/missing_field.rs:10:10
   |
10 |         <Component />
   |          ^^^^^^^^^ an argument of type `ComponentPropsBuilder_Error_Missing_required_field_prop` is missing
   |
note: method defined here
  --> tests/ui/view/missing_field.rs:3:1
   |
3  | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
10 |         <Component(/* ComponentPropsBuilder_Error_Missing_required_field_prop */) />
   |                   +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
